--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "repository": {
     "type": "git",
     "url": "your-repo-url"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
